--- a/.gitignore
+++ b/.gitignore
@@ -20,14 +20,13 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
+# IDE - VSCode
+/.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
-
 # Miscellaneous
 /.angular/cache
 .sass-cache/
